<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_registro">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/textView_title_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueva_cuenta"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_inputLayout_correo_registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textView_title_registro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_crear_cuenta_fragment_registro"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginHorizontal="30dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_correo_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresa_tu_correo"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_crear_cuenta_fragment_registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:backgroundTint="@color/naranja"
            app:layout_constraintTop_toBottomOf="@id/text_inputLayout_correo_registro"
            app:layout_constraintStart_toStartOf="@id/lineaguia1_registro"
            app:layout_constraintEnd_toEndOf="@id/lineaguia2_registro"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineaguia1_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineaguia2_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="381dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>